<resources>
    <string name="app_name">StudyBee</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="arrayGender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="arrayAccType">
        <item>Student</item>
        <item>Teaching Assistant</item>
    </string-array>

    <string-array name="arrayStyle">
        <item>Quiet</item>
        <item>Discussion</item>
    </string-array>

    <string-array name="arraySize">
        <item>less than 5</item>
        <item>less than 8</item>
        <item>8 and above</item>
    </string-array>

    <string-array name="arrayTA">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="arrayFAC">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="meeting_number">Meeting Number</string>
    <string name="meeting_password">Meeting Password</string>
    <string name="email">Email</string>
    <string name="password">password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    string name related to profile page -->
    <string name="label_name">Full Name:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_age">Age:</string>
    <string name="label_school">School:</string>
    <string name="label_default">default</string>

    <!--    string name related to records  page -->
    <string name="title_upcoming">Upcoming Meetings</string>
    <string name="title_past">Past Meetings</string>
    <string name="find_your_study_buddies">Find your study buddies</string>
    <string name="study_bee">Study Bee</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="host_your_study_group_meeting">Host your study group\nmeeting</string>
    <string name="select_study_group_meeting_nfrom_the_lobby">Select study group meeting\nfrom the lobby</string>


    <!--    string name related to onboarding  page -->
    <string name="slider_one">Join existing study group</string>
    <string name="slider_two">Host your meetings</string>
    <string name="slider_three">Meet new study buddies</string>
    <string name="get_started">Get Started</string>

    <!--    string name related to Zoom  page -->
    <string name="invite_acitivity_name">Meeting Invite Example</string>

    <string name="zm_rc_using_fingers_for_remote_control">Remotely control a desktop using gestures</string>
    <string name="zm_rc_one_finger_tap">Tap with one finger</string>
    <string name="zm_rc_one_finger_tap_description">Tap the screen with one finger to click the mouse</string>
    <string name="zm_rc_one_finger_double_taps">Double tap with one finger</string>
    <string name="zm_rc_one_finger_double_taps_description">Double tap with one finger to double click the mouse</string>
    <string name="zm_rc_one_long_tap">Long press with one finger</string>
    <string name="zm_rc_one_long_tap_description">Press the screen with one finger to right-click the mouse</string>
    <string name="zm_rc_two_fingers_scroll">Swipe with two fingers</string>
    <string name="zm_rc_two_fingers_scroll_description">Swipe with two fingers to scroll up and down</string>
    <string name="zm_rc_two_fingers_pinch">Pinch with two fingers</string>
    <string name="zm_rc_two_fingers_pinch_description">Pinch in and out with two fingers to zoom in and out</string>
    <string name="zm_rc_mouse_icon">Mouse icon</string>
    <string name="zm_rc_mouse_icon_description">Drag the mouse icon to move the remote mouse pointer</string>
    <string name="zm_rc_tap_notice">Tap here to control %s\'s screen remotely</string>

    <string name="alert_other_is_sharing">You cannot start screen share while the other participant is sharing.</string>

    <string name="settings_custom_ui">Enable Breakout Room</string>
    <string name="settings_switch_domain">Switch domain</string>
    <string name="settings_hide_screen_share_toolbar_annotation">Hide annotation button in screen share</string>
    <string name="settings_hide_screen_share_toolbar_stopshare">Hide stopshare button in screen share</string>
    <string name="this_app_name">StudyBee</string>
    <string name="select_country">SELECT COUNTRY</string>

    // for profile
    <string name="profileinfo">INFO</string>
    <string name="profilerecords">RECORDS</string>
    <string name="profilefriends">FRIENDS</string>
    <string name="save_info">SAVE</string>
</resources>
