<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_nav_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profilebg">

        <RelativeLayout
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_200sdp"
            android:padding="@dimen/upcoming_item_padding"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="">


            <TextView
                android:id="@+id/profile_name"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_100sdp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="Name"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
               android:layout_marginTop="@dimen/_60sdp"
                android:background="@drawable/rectangleview"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:paddingTop="@dimen/_40sdp"
                android:background="@drawable/profile_pic" />


        </RelativeLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="204dp"
            android:background="@color/profile_top_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/info_button"
                android:layout_width="140dp"
                android:layout_height="65dp"
                android:background="@color/colorPrimaryDark"

                android:text="@string/profileinfo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/record_button"
                app:layout_constraintHorizontal_bias="0.29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:fontFamily="@font/averiasanslibre_bold"
                android:textSize="@dimen/_16sdp"/>

            <Button
                android:id="@+id/record_button"
                android:layout_width="140dp"
                android:layout_height="65dp"
                android:background="@color/colorPrimaryDark"

                android:text="@string/profilerecords"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/friend_button"
                app:layout_constraintStart_toEndOf="@id/info_button"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/averiasanslibre_bold"
                android:textSize="@dimen/_16sdp"/>

            <Button
                android:id="@+id/friend_button"
                android:layout_width="140dp"
                android:layout_height="65dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/profilefriends"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.977"
                app:layout_constraintStart_toEndOf="@id/record_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:fontFamily="@font/averiasanslibre_bold"
                android:textSize="@dimen/_16sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/childcontainer"
            android:layout_width="409dp"
            android:layout_height="333dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navbar"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>