<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_nav_bg"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_bg">


        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="Name"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="413dp"
            android:layout_height="109dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.102"
            tools:layout_conversion_absoluteHeight="128dp"
            tools:layout_conversion_absoluteWidth="88dp"
            tools:srcCompat="@drawable/defprofilepicture" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:layout_marginTop="13dp"
            android:background="@color/profile_top_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name"
            app:layout_constraintVertical_bias="0.054">

            <TextView
                android:id="@+id/label_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="25dp"
                android:text="@string/label_school"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_age" />

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="28dp"
                android:text="@string/label_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.003"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_full_name2" />

            <TextView
                android:id="@+id/label_full_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="20dp"
                android:text="Username:"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="28dp"
                android:text="@string/label_age"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_name" />

            <TextView
                android:id="@+id/label_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="22dp"
                android:text="@string/label_gender"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/edit_age"
                app:layout_constraintTop_toBottomOf="@+id/edit_name" />

            <TextView
                android:id="@+id/label_gender2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="28dp"
                android:text="Password:"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_school" />

            <TextView
                android:id="@+id/label_gender3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="21dp"
                android:text="Email:"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_gender2" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="150dp"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:hint="New full name"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/label_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_username" />

            <EditText
                android:id="@+id/edit_age"
                android:layout_width="51dp"
                android:layout_height="36dp"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:hint="Age"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/label_age"
                app:layout_constraintTop_toBottomOf="@+id/edit_name" />

            <EditText
                android:id="@+id/edit_school"
                android:layout_width="155dp"
                android:layout_height="37dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="8dp"
                android:hint="New faculty"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/label_school"
                app:layout_constraintTop_toBottomOf="@+id/edit_age" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="152dp"
                android:layout_height="33dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="14dp"
                android:hint="New password"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/label_gender2"
                app:layout_constraintTop_toBottomOf="@+id/edit_school" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="155dp"
                android:layout_height="34dp"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:hint="New email"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/label_gender3"
                app:layout_constraintTop_toBottomOf="@+id/edit_password" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="148dp"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="New username"
                android:inputType="textPersonName"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/label_full_name2"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/edit_gender"
                android:layout_width="66dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:layout_toRightOf="@+id/label_gender"
                android:entries="@array/arrayGender"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@+id/label_gender"
                app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="91dp"
            android:layout_height="40dp"
            android:layout_marginTop="27dp"
            android:backgroundTint="@color/profile_top_bg"
            android:onClick="submitClicked"
            android:text="@string/save_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollview"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/bottomnav"-->
    <!--        android:layout_width="368dp"-->
    <!--        android:layout_height="72dp"-->
    <!--        android:layout_marginTop="1dp"-->
    <!--        android:background="@color/bottom_nav_bg"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/top_bg">-->

    <!--        <ImageButton-->
    <!--            android:id="@+id/join"-->
    <!--            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"-->
    <!--            android:layout_width="63dp"-->
    <!--            android:layout_height="63dp"-->
    <!--            android:background="@drawable/join_icon"-->
    <!--            android:scaleType="fitCenter"-->
    <!--            android:src="@drawable/join_icon"-->
    <!--            android:tint="#FFC107"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toStartOf="@+id/lobby"-->
    <!--            app:layout_constraintHorizontal_bias="0.438"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintVertical_bias="0.555" />-->

    <!--        <ImageButton-->
    <!--            android:id="@+id/profile"-->
    <!--            android:layout_width="63dp"-->
    <!--            android:layout_height="63dp"-->
    <!--            android:background="@drawable/user"-->
    <!--            android:onClick="profileBotClicked"-->
    <!--            android:scaleType="fitCenter"-->
    <!--            android:src="@drawable/user"-->
    <!--            android:tint="#FFC107"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintHorizontal_bias="0.566"-->
    <!--            app:layout_constraintStart_toEndOf="@+id/lobby"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->

    <!--        <ImageButton-->
    <!--            android:id="@+id/lobby"-->
    <!--            android:layout_width="63dp"-->
    <!--            android:layout_height="63dp"-->
    <!--            android:background="@drawable/home"-->
    <!--            android:onClick="homeBotClicked"-->
    <!--            android:scaleType="fitCenter"-->
    <!--            android:src="@drawable/home"-->
    <!--            android:tint="#FFC107"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintHorizontal_bias="0.501"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->
    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</RelativeLayout>